--- a/spring-cloud-alibaba-starters/pom.xml
+++ b/spring-cloud-alibaba-starters/pom.xml
@@ -31,6 +31,7 @@
         <module>spring-cloud-starter-alibaba-governance-auth</module>
         <module>spring-cloud-starter-alibaba-governance-routing</module>
         <module>spring-cloud-alibaba-commons</module>
+        <module>spring-cloud-starter-alibaba-schedulerx</module>
     </modules>
 
     <build>
