--- a/spring-cloud-alibaba-examples/pom.xml
+++ b/spring-cloud-alibaba-examples/pom.xml
@@ -53,7 +53,8 @@
         <module>integrated-example/integrated-common</module>
 		<module>integrated-example/integrated-frontend</module>
 		<module>spring-cloud-ai-example</module>
-	</modules>
+        <module>spring-cloud-scheduling-example</module>
+    </modules>
 
 
     <build>
