--- a/spring-cloud-alibaba-starters/pom.xml
+++ b/spring-cloud-alibaba-starters/pom.xml
@@ -27,7 +27,8 @@
         <module>spring-cloud-alibaba-sentinel-gateway</module>
         <module>spring-cloud-alibaba-commons</module>
 		<module>spring-cloud-starter-alibaba-ai</module>
-	</modules>
+        <module>spring-cloud-starter-alibaba-schedulerx</module>
+    </modules>
 
     <build>
         <plugins>
