--- a/spring-cloud-alibaba-examples/spring-cloud-scheduling-example/src/main/resources/application.yaml
+++ b/spring-cloud-alibaba-examples/spring-cloud-scheduling-example/src/main/resources/application.yaml
@@ -2,6 +2,7 @@ server:
   port: 18080
 spring:
   profiles:
+    # Select the config file to use, shedlock or schedulerx
     active: shedlock
   application:
     name: spring-cloud-alibaba-schedule-example
